add student, subject controller and fix problem controller